--- a/dafdefano.html
+++ b/dafdefano.html
@@ -16,7 +16,7 @@
 <body>
     <div class="cover">
         <a href="https://ofirapps.github.io/_"><img src="https://i.ibb.co/Km5gPQ5/ofirlogoerrorclear.png" width="150" height="150" alt="Ofirapps" align="center"></a>
-        <h1>מוריד את האפליקציה...</h1>
+        <h1>מוריד את האפליקציה...</h1> <small>לחצו על הקישור שיופיע בעוד 5 שניות</small>
         <p class="lead"></p>
 
 <script>
