--- a/dafdefano.html
+++ b/dafdefano.html
@@ -24,7 +24,7 @@ function goBack() {
   window.history.back();
 }
 </script>
-<div id="container"><h1><a class="nav-link waves-effect waves-light" href="https://ofirapps.github.io/_" target="_self"><p align="center"><i class="fa fa-home"></i>עמוד הבית</p></a></h1>
+<div id="container"><h1><a class="nav-link waves-effect waves-light" href="https://ofirapps.github.io/files/OfirsBrowser.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה</p></a></h1>
 </div>
 
 <script>
