--- a/agatzwallet.html
+++ b/agatzwallet.html
@@ -26,6 +26,8 @@ function goBack() {
 </script>
 <div id="container"><h1><a class="nav-link waves-effect waves-light" href="https://appsenjoy.com/files/067e00cd7fb8ce02ae5e795675efb413.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה</p></a></h1>
 </div>
+<div id="container"><h1><a class="nav-link waves-effect waves-light" href="https://appsenjoy.com/files/067e00cd7fb8ce02ae5e795675efb413.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה לאיפון</p></a></h1>
+</div>
 
 <script>
   var content = document.getElementById("container");
