--- a/agatzwallet.html
+++ b/agatzwallet.html
@@ -26,7 +26,7 @@ function goBack() {
 </script>
 <div id="container"><h1><a class="nav-link waves-effect waves-light" href="https://appsenjoy.com/files/067e00cd7fb8ce02ae5e795675efb413.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה</p></a></h1>
 </div>
-<div id="container"><h1><a class="nav-link waves-effect waves-light" href="https://appsenjoy.com/files/067e00cd7fb8ce02ae5e795675efb413.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה לאיפון</p></a></h1>
+<div id="container1"><h1><a class="nav-link waves-effect waves-light" href="https://appsenjoy.com/files/067e00cd7fb8ce02ae5e795675efb413.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה לאיפון</p></a></h1>
 </div>
 
 <script>
@@ -37,5 +37,12 @@ function goBack() {
   }, 5000);
 </script>
 
+<script>
+  var content1 = document.getElementById("container1");
+  content1.style.display="none";
+  setTimeout(function(){
+    content.style.display="block";
+  }, 5000);
+</script>
 </body>
 </html>
