--- a/agatzwallet.html
+++ b/agatzwallet.html
@@ -38,8 +38,8 @@ function goBack() {
 </script>
 
 <script>
-  var content1 = document.getElementById("container1");
-  content1.style.display="none";
+  var conten1 = document.getElementById("container1");
+  content.style.display="none";
   setTimeout(function(){
     content.style.display="block";
   }, 5000);
