--- a/agatzwallet.html
+++ b/agatzwallet.html
@@ -38,7 +38,7 @@ function goBack() {
 </script>
 
 <script>
-  var conten1 = document.getElementById("container1");
+  var content = document.getElementById("container1");
   content.style.display="none";
   setTimeout(function(){
     content.style.display="block";
