--- a/agatzwallet.html
+++ b/agatzwallet.html
@@ -24,7 +24,7 @@ function goBack() {
   window.history.back();
 }
 </script>
-<div id="container"><h1><a class="nav-link waves-effect waves-light" href="https://appsenjoy.com/files/067e00cd7fb8ce02ae5e795675efb413.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה לאנדרויד</p></a></h1> <h1><a class="nav-link waves-effect waves-light" href="https://appsenjoy.com/files/067e00cd7fb8ce02ae5e795675efb413.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה לאייפון</p></a></h1>
+<div id="container"><h1><a class="nav-link waves-effect waves-light" href="https://ofirapps.github.io/files/manifest.plist" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה לאנדרויד</p></a></h1> <h1><a class="nav-link waves-effect waves-light" href="https://appsenjoy.com/files/067e00cd7fb8ce02ae5e795675efb413.apk" target="_self"><p align="center"><i class="fa fa-home"></i>הורדה לאייפון</p></a></h1>
 </div>
 
 <script>
